demo2-ecs-fargate.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: "Demo 2 - ECS con Fargate: Containers serverless con orquestador nativo AWS"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags: [{Key: Name, Value: demo2-ecs-fargate}]

  IGW:
    Type: AWS::EC2::InternetGateway
  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: {VpcId: !Ref VPC, InternetGatewayId: !Ref IGW}

  SubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
  SubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true

  RT:
    Type: AWS::EC2::RouteTable
    Properties: {VpcId: !Ref VPC}
  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties: {RouteTableId: !Ref RT, DestinationCidrBlock: 0.0.0.0/0, GatewayId: !Ref IGW}
  RTAssocA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: {SubnetId: !Ref SubnetA, RouteTableId: !Ref RT}
  RTAssocB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: {SubnetId: !Ref SubnetB, RouteTableId: !Ref RT}

  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - {IpProtocol: tcp, FromPort: 80, ToPort: 80, CidrIp: 0.0.0.0/0}
  TaskSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Fargate tasks
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - {IpProtocol: tcp, FromPort: 80, ToPort: 80, SourceSecurityGroupId: !Ref ALBSG}

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets: [!Ref SubnetA, !Ref SubnetB]
      SecurityGroups: [!Ref ALBSG]
  TG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: {Port: 80, Protocol: HTTP, VpcId: !Ref VPC, TargetType: ip, HealthCheckPath: /}
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions: [{Type: forward, TargetGroupArn: !Ref TG}]

  Cluster:
    Type: AWS::ECS::Cluster
    Properties: {ClusterName: demo2-ecs-fargate}

  ExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - {Effect: Allow, Principal: {Service: ecs-tasks.amazonaws.com}, Action: 'sts:AssumeRole'}
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  TaskDef:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: demo2-nginx
      NetworkMode: awsvpc
      RequiresCompatibilities: [FARGATE]
      Cpu: '256'
      Memory: '512'
      ExecutionRoleArn: !GetAtt ExecutionRole.Arn
      ContainerDefinitions:
        - Name: nginx
          Image: public.ecr.aws/nginx/nginx:latest
          PortMappings: [{ContainerPort: 80, Protocol: tcp}]

  Service:
    Type: AWS::ECS::Service
    DependsOn: Listener
    Properties:
      Cluster: !Ref Cluster
      TaskDefinition: !Ref TaskDef
      DesiredCount: 2
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets: [!Ref SubnetA, !Ref SubnetB]
          SecurityGroups: [!Ref TaskSG]
      LoadBalancers:
        - {ContainerName: nginx, ContainerPort: 80, TargetGroupArn: !Ref TG}

Outputs:
  URL:
    Value: !Sub "http://${ALB.DNSName}"
    Description: URL de NGINX en ECS con Fargate
